--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "downshift": "^9.0.8",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "~11.1.1",
     "i18n": "^0.15.1",
@@ -69,7 +70,7 @@
     "next-i18next": "^15.4.1",
     "next-intl": "^3.26.3",
     "next-themes": "^0.2.1",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "3.4.120",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -96,7 +97,8 @@
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "y-webrtc": "^10.3.0",
-    "yjs": "^13.6.20"
+    "yjs": "^13.6.20",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
