--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-aria/visually-hidden": "3.8.12",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@remixicon/react": "^4.5.0",
     "@types/pdfjs-dist": "^2.10.378",
@@ -78,7 +80,7 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
-    "react-pdf": "^9.1.1",
+    "react-pdf": "^9.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.3",
