--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.441.0",
     "mammoth": "^1.8.0",
+    "markdown-it": "^14.1.0",
     "markdown-table": "^3.0.3",
     "next": "^14.2.11",
     "next-i18next": "^15.4.1",
@@ -79,7 +80,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.0.3",
     "react-pdf": "^9.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
@@ -88,7 +89,9 @@
     "react-syntax-highlighter": "^15.6.1",
     "reactflow": "^11.11.4",
     "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "remixicon": "^4.3.0",
     "si": "^2.0.0",
     "tailwind-merge": "^2.5.2",
@@ -101,6 +104,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "20.5.7",
     "@types/qs": "^6.9.16",
     "@types/react": "18.3.3",
