--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/snippet": "2.0.41",
     "@nextui-org/switch": "2.0.33",
-    "@nextui-org/system": "2.2.5",
+    "@nextui-org/system": "^2.4.6",
     "@nextui-org/theme": "2.2.9",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -58,7 +58,7 @@
     "dayjs": "^1.11.13",
     "downshift": "^9.0.8",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "~11.1.1",
+    "framer-motion": "^11.18.0",
     "i18n": "^0.15.1",
     "i18next": "^23.15.1",
     "intl-messageformat": "^10.5.0",
