--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,18 @@
     "@blocknote/react": "^0.12.2",
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@heroicons/react": "^2.1.5",
-    "@nextui-org/button": "2.0.37",
-    "@nextui-org/code": "2.0.32",
-    "@nextui-org/input": "2.2.4",
-    "@nextui-org/kbd": "2.0.33",
-    "@nextui-org/link": "2.0.34",
-    "@nextui-org/listbox": "^2.1.25",
-    "@nextui-org/navbar": "2.0.36",
-    "@nextui-org/react": "^2.4.6",
-    "@nextui-org/snippet": "2.0.41",
-    "@nextui-org/switch": "2.0.33",
+    "@nextui-org/button": "^2.2.9",
+    "@nextui-org/code": "^2.2.6",
+    "@nextui-org/input": "^2.4.8",
+    "@nextui-org/kbd": "^2.2.6",
+    "@nextui-org/link": "^2.2.7",
+    "@nextui-org/listbox": "^2.3.9",
+    "@nextui-org/navbar": "^2.2.8",
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/snippet": "^2.2.10",
+    "@nextui-org/switch": "^2.2.8",
     "@nextui-org/system": "^2.4.6",
-    "@nextui-org/theme": "2.2.9",
+    "@nextui-org/theme": "^2.4.5",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
