--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@blocknote/react": "^0.12.2",
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@heroicons/react": "^2.1.5",
+    "@heroui/dropdown": "^2.3.10",
     "@nextui-org/button": "^2.2.9",
     "@nextui-org/code": "^2.2.6",
     "@nextui-org/input": "^2.4.8",
