--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@heroicons/react": "^2.1.5",
     "@heroui/dropdown": "^2.3.10",
+    "@heroui/input": "^2.4.10",
     "@nextui-org/button": "^2.2.9",
     "@nextui-org/code": "^2.2.6",
     "@nextui-org/input": "^2.4.8",
@@ -89,6 +90,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-rnd": "^10.4.13",
     "react-syntax-highlighter": "^15.6.1",
+    "react-window": "^1.8.11",
     "reactflow": "^11.11.4",
     "rehype-highlight": "^7.0.0",
     "remixicon": "^4.3.0",
